[gd_scene load_steps=3 format=3 uid="uid://bmwravq1vl4kb"]

[ext_resource type="Script" uid="uid://cphetrc0fr325" path="res://scenes/main_menu.gd" id="1_yqorp"]
[ext_resource type="Texture2D" uid="uid://dauvgpuyplhk" path="res://assets/logo new.png" id="2_0ykhv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_0ykhv")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.141
anchor_right = 1.0
anchor_bottom = 0.88400006
offset_top = -0.10700226
offset_bottom = -0.06802368
grow_horizontal = 2
grow_vertical = 2
color = Color(0.24115604, 0.24115604, 0.24115604, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -60.5
offset_right = 58.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ModsButton" type="Button" parent="MarginContainer/VBoxContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mods"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Game Version: 0.4d"

[node name="SettingsWindow" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27022192, 0.27022192, 0.2702219, 1)

[node name="Control" type="Control" parent="SettingsWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsWindow/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="SettingsWindow/Control/VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0.22670749, 0.22670749, 0.22670746, 1)

[node name="MarginContainer" type="MarginContainer" parent="SettingsWindow/Control/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsWindow/Control/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="CloseButton" type="Button" parent="SettingsWindow/Control/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "X"

[node name="MarginContainer2" type="MarginContainer" parent="SettingsWindow/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="SettingsWindow/Control/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsWindow/Control/VBoxContainer/MarginContainer2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsWindow/Control/VBoxContainer/MarginContainer2/Control/HBoxContainer"]
layout_mode = 2
text = "Язык"

[node name="LangOptionButton" type="OptionButton" parent="SettingsWindow/Control/VBoxContainer/MarginContainer2/Control/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsWindow/Control/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="item_selected" from="SettingsWindow/Control/VBoxContainer/MarginContainer2/Control/HBoxContainer/LangOptionButton" to="." method="_on_lang_option_button_item_selected"]
